--- a/.github/workflows/news_update.yml
+++ b/.github/workflows/news_update.yml
@@ -3,36 +3,45 @@ name: Update News Feed
 on:
   schedule:
     - cron: "0 */6 * * *"   # every 6 hours
-  workflow_dispatch:       # allow manual run
+  workflow_dispatch:        # allow manual run
+
+# Give this workflow permission to push commits.
+permissions:
+  contents: write
 
 jobs:
   update-news:
     runs-on: ubuntu-latest
 
     steps:
-       - name: Install dependencies
-          run: |
-                pip install feedparser requests
-
-
       - name: Checkout repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
-          python-version: "3.x"
+          python-version: "3.11"
 
-      - name: Install feedparser
-        run: pip install feedparser requests
+      - name: Install dependencies
+        run: |
+          pip install feedparser requests
 
-      - name: Run fetch_news script
+      - name: Ensure news.json exists
+        run: |
+          mkdir -p data
+          [ -f data/news.json ] || echo "[]" > data/news.json
+
+      - name: Run fetch script
         run: python fetch_news.py
 
-      - name: Commit changes
+      - name: Commit changes (if any)
         run: |
-          git config --local user.email "actions@github.com"
-          git config --local user.name "GitHub Actions"
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add data/news.json
-          git commit -m "Auto-update news feed" || echo "No changes to commit"
-          git push
+          if git diff --cached --quiet; then
+            echo "No updates to news.json"
+          else
+            git commit -m "Auto-update news feed"
+            git push
+          fi
